overflowing text in modal sub 450px wide fixed

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1687,6 +1687,7 @@ footer {
   }
   .modal {
     height: 70%;
+    width: 90%;
   }
 }
 
@@ -1778,9 +1779,16 @@ footer {
   }
   .home-container h1 {
     font-size: 30px;
+    font-weight: 600;
+  }
+  .home-container #years {
+    font-weight: 900;
   }
   .home-container h3 {
     font-size: 20px;
+  }
+  .modal-label label {
+    font-size: 12px;
   }
 }
 @media screen and (max-width: 280px) {
@@ -1864,5 +1872,43 @@ footer {
   }
   .pricing-button {
     opacity: 1;
+  }
+}
+
+@media screen and (max-height: 800px) {
+  .nav-container {
+    width: 100%;
+    height: 5%;
+  }
+  #nav-logo {
+    height: 90px;
+    width: 90px;
+  }
+  .menu-toggle {
+    display: block;
+  }
+  .nav-item-desktop {
+    display: none;
+  }
+  .nav-links-desktop {
+    display: none;
+  }
+  .mobile-dropdown.is-selected {
+    visibility: visible;
+  }
+  .mobile-dropdown.is-selected a {
+    font-size: 33px;
+  }
+  #meet {
+    border-right: 2px solid transparent;
+  }
+  .container.btn {
+    margin: 0 auto;
+  }
+  .weather {
+    display: none;
+  }
+  .hours {
+    display: none;
   }
 }
